applications/mailu/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mailu-gateway
  namespace: mailu
spec:
  gatewayClassName: traefik
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: websecure
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
  - allowedRoutes:
      namespaces:
        from: Same
    name: submissions
    port: 465
    protocol: TLS
    tls:
      mode: Passthrough
  - allowedRoutes:
      namespaces:
        from: Same
    name: imaps
    port: 993
    protocol: TLS
    tls:
      mode: Passthrough
  - allowedRoutes:
      namespaces:
        from: Same
    name: pop3s
    port: 995
    protocol: TLS
    tls:
      mode: Passthrough
  - allowedRoutes:
      namespaces:
        from: Same
    name: sieve
    port: 4190
    protocol: TCP
  - allowedRoutes:
      namespaces:
        from: Same
    name: smtp
    port: 25
    protocol: TCP
