applications/mailu/tlsroute-pop3s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: mailu-pop3s
  namespace: mailu
spec:
  hostnames:
  - mail.thegraveshouse.com
  - pop3.thegraveshouse.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: mailu-gateway
    sectionName: pop3s
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: mailu-front
      port: 995
      weight: 1
