applications/mailu/tlsroute-sieve.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: mailu-sieve
  namespace: mailu
spec:
  hostnames:
  - mail.thegraveshouse.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: mailu-gateway
    sectionName: sieve
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: mailu-front
      port: 14190
      weight: 1
