applications/mailu/tlsroute-smtp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: mailu-smtp
  namespace: mailu
spec:
  hostnames:
  - mail.thegraveshouse.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: mailu-gateway
    sectionName: smtp
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: mailu-front
      port: 25
