applications/mailu/tlsroute-submissions.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: mailu-submissions
  namespace: mailu
spec:
  hostnames:
  - mail.thegraveshouse.com
  - smtp.thegraveshouse.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: mailu-gateway
    sectionName: submissions
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: mailu-front
      port: 465
